Carousel component created and is completely functional with sliding effect

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ body {
         rgba(#193763, 0)
     );
     animation: shimmer 2s infinite;
-    content: "";
+    content: '';
 }
 
 @keyframes shimmer {
