--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -15,7 +15,7 @@
 
 .carousel .arrow {
     font-size: 30px;
-    color: black;
+    color: grey;
     position: absolute;
     top: 44%;
     transform: translateY(-50%);
@@ -23,6 +23,7 @@
     opacity: 0.5;
     z-index: 1;
     display: none;
+    border-radius: 50%;
 }
 
 .carousel .arrow:hover {
